A typographical error was fixed.

--- a/experiments/trivia/instructions.html
+++ b/experiments/trivia/instructions.html
@@ -76,7 +76,7 @@
                     opportunity is spent. 
                 </p>
                 <p>
-                    After clicking an answer, the application is transioned to a subphase that shows
+                    After clicking an answer, the application is transitioned to a subphase that shows
                     a textual indication that the answer was either correct or incorrect.  This 
                     subphase also gives a button; the button either leads to another question phase, or
                     leads to the summary phase if no further questions are available.  Look for a textual cue that
