The trivia instructions received some editing.

--- a/experiments/trivia/instructions.html
+++ b/experiments/trivia/instructions.html
@@ -69,7 +69,7 @@
                 </p>
                 <p>
                     2. The second type of phase is the "question" phase.  The user can see a textual
-                    indications of the question's prompt and the question's category.  Below these indcations,
+                    indication of the question's prompt and the question's category.  Below these indications,
                     there are multiple clickable buttons.  Each button represents a possible answer to the
                     question; the button's textual label conveys a possible answer to the question.
                     You get one chance to answer a question.  If you click on one answer, then your
