--- a/experiments/trivia/instructions.html
+++ b/experiments/trivia/instructions.html
@@ -52,8 +52,8 @@
                 </p>
                 <p>
                     Look out for orange rectangles that show a pointer (hand)
-                    icon when the mouse is moved into hovering viscinity.  These
-                    rectangles may be construed as buttons; a click triggers a
+                    icon when the mouse is moved into hovering viscinity.  The term "button" will be used
+                    to refer to an instance of these organge rectangles.  A click of a button triggers some
                     transition in the application.  The rectangle's textual label
                     is a cue that suggests the behavior that's connected with a click.
                     You might see other textual indications in the viscinity of these
