Some editing was performed...
- Usage of term 'trivia' was mostly replaced with 'quiz'...
- Instructions were updated...
- JavaScript bundle was updated...

--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
                 Experimental Projects:
             </div>
             <div class="content-slice description-experimental">
-                #1: A Trivia Experience:
+                #1: A Quiz Experience
             </div>
             <div class="content-slice description-experimental description-blurb">
-                - I used some HTML and JavaScript to create a user-interface for trivia, and
+                - I used some HTML and JavaScript to create a user-interface for quiz-like applications, and
                 to research pertinent data structures and design patterns.
             </div>
             <div class="content-slice description-experimental description-blurb">
-                <span>URL:</span><a href="./experiments/trivia/index.html">
-                    https://johnorland2.github.io/experiments/trivia/index.html
+                <span>URL:</span><a href="./experiments/quiz/index.html">
+                    https://johnorland2.github.io/experiments/quiz/index.html
                 </a>
             </div>
         </div>
