Some editing was performed...
- A typographical error was fixed...

--- a/experiments/quiz/instructions.html
+++ b/experiments/quiz/instructions.html
@@ -103,7 +103,7 @@
                 </p>
                 <p>
                     The questions' prompts and answers were designed by the developer (John).  They are inspired/motivated by
-                    hobby reading, recent events and similar things.  The questions' prompts, answers (and conncted facts, subjects, categories, etc) are not intended to be the main focus within this
+                    hobby reading, recent events and similar things.  The questions' prompts, answers (and connected facts, subjects, categories, etc) are not intended to be the main focus within this
                     technical demonstration; they seemed sufficiently interesting to provide some intrigue, and to give motivation/reason for the existence of the application/interface.  The
                     application/interface (HTML, JavaScript, CSS, user-experience, etc) is intended as the main focus of the experiment.  
                     Further, the questions and answers might somehow misportray the
