Some editing was performed...
- Instructions were modified...

--- a/experiments/quiz/instructions.html
+++ b/experiments/quiz/instructions.html
@@ -175,9 +175,10 @@
                     c. etc.
                 </p>
                 <p>
-                    Apparently, these things combine to form a spectrum/mesh of contexts and protections. This permits
-                    development to continue despite inherent risks.  Ideally end users would not experience major issues and losses due to forewarning; ideally they would be able to opt out
-                    and/or implement their own client-side protections before reaching a point of assuming major risks.
+                    Apparently, these things combine to form an approximate mesh of contexts and protections to help most issues to be mitigated. This seemingly helps
+                    development and deployment to be acceptable despite inherent risks, errors, etc..  Ideally end users would not experience major issues and losses due to forewarning; ideally they would be able to opt out
+                    and/or implement their own client-side protections before reaching a point of assuming major risks.  Reading GitHub's terms of service,
+                    web browsers' licenses and similar things might be useful for understanding the so-called risk profile of this experiment.
                 </p>
                 <p>
                     In the future, this application might be redesigned or repurposed in order to increase safety
