Some changes were made:
- JavaScript was updated; now it produces some arithmetic questions in the quiz UI.
- instructions.html for the quiz UI was updated to mention presence of arithmetic questions.

--- a/experiments/quiz/instructions.html
+++ b/experiments/quiz/instructions.html
@@ -118,7 +118,7 @@
                 </p>
                 <p>
                     The categories in this demonstration are: "anthropological", "computer programming", "driver's safety",
-                    "physical fitness" and "outdoors recreation".
+                    "physical fitness", "outdoors recreation" and "arithmetic".
                 </p>
                 <p>
                     A future version of the application could be reworked/adapted to have other categories, different
@@ -198,6 +198,12 @@
                     provisionally swapped in, and replaced the word "trivia" to improve clarity.  The code still could be used with either "quiz" questions or "trivia" questions
                     for a different project.  A future version of this experiment might use other questions to avoid unintended consequences (troublesome controversy,
                     hurt feelings, etc), such as "arithmetic" questions; development of the "arithmetic" questions is a work-in-progress.
+                </p>
+                <p class="text-warning text-bold">
+                    Update (2/18/2024):
+                </p>
+                <p class="text-warning">
+                    Questions in categories besides arithmetic were provisionally disabled.  Some arithmetic questions were added.
                 </p>
             </div>
         </div>
