index.html profile image was updated.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div class="container-inner">
                         <div class="container-card-cell">
                             <div class="container-portrait">
-                                <img class="image-portrait" width=175 height="175" src="./images/02_03_2024_github.png" />
+                                <img class="image-portrait" width=175 height="175" src="./images/placeholder.png" />
                             </div>
                         </div>
                         <div class="container-card-cell">
