The custom_lined_paper experiment was added.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,20 @@
                     https://johnorland2.github.io/experiments/quiz/index.html
                 </a>
             </div>
+            <div class="content-slice description-experimental">
+                #2: Custom Lined Paper
+            </div>
+            <div class="content-slice description-experimental description-blurb">
+                - I used some HTML and CSS to create an HTML file that may be used for
+                creating lined paper with custom sizing; e.g. you can have smaller line height to get
+                more lines onto one page, and this allows you to fit more handwritten writing onto one page.  Option: print the HTML to PDF
+                with neither header, footer nor margins, then print the PDF to some printer. Option: adjust the CSS.
+            </div>
+            <div class="content-slice description-experimental description-blurb">
+                <span>URL:</span><a href="./experiments/custom_lined_paper/first.html">
+                    https://johnorland2.github.io/experiments/custom_lined_paper/first.html
+                </a>
+            </div>
         </div>
     </body>
 </html>
