PA new experiment was provisionally added (mock gambling).

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 #1: A Quiz Experience
             </div>
             <div class="content-slice description-experimental description-blurb">
-                - I used some HTML and JavaScript to create a user-interface for quiz-like applications, and
+                - I used some HTML, CSS and JavaScript to create a user-interface for quiz-like applications, and
                 to research pertinent data structures and design patterns.
             </div>
             <div class="content-slice description-experimental description-blurb">
@@ -167,6 +167,18 @@
             <div class="content-slice description-experimental description-blurb">
                 <span>URL:</span><a href="./experiments/custom_lined_paper/first.html">
                     https://johnorland2.github.io/experiments/custom_lined_paper/first.html
+                </a>
+            </div>
+            <div class="content-slice description-experimental">
+                #3: A Mock Gambling Experience
+            </div>
+            <div class="content-slice description-experimental description-blurb">
+                - I used some HTML, CSS and JavaScript to create a mock gambling interface.  The included techniques could be
+                reworked and adapted for other games and purposes.
+            </div>
+            <div class="content-slice description-experimental description-blurb">
+                <span>URL:</span><a href="./experiments/mock_gambling/index.html">
+                    https://johnorland2.github.io/experiments/mock_gambling/index.html
                 </a>
             </div>
         </div>
