Mock gambling instructions were updated.

--- a/experiments/mock_gambling/instructions.html
+++ b/experiments/mock_gambling/instructions.html
@@ -47,7 +47,7 @@
             </div>
             <div class="content-slice">
                 <p class="text-bold">
-                    Overview:
+                    Introduction:
                 </p>
                 <p>
                     This application shows a user-interface for entertainment.
